[package]
name = "bst-rs"
version = "0.1.0"
edition = "2021"
authors = ["0x29A <kwancr92@gmail.com>"]
keywords = ["SIMD", "binary search", "sse", "avx2"]
categories = ["algorithm"]
license = "Apache-2.0/MIT"
description = "another blazing fast binary search algorithm through SIMDs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4", default-feature = false, features = ["std"] }

[features]
default = ["std", "use-sse"]
std = ["num/std"]
use-sse = []
use-avx2 = []